--- a/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Nucelos.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Nucelos.razor
@@ -30,7 +30,7 @@
 </div>
 
 <!-- Vista de resultado de Nucleos -->
-<fieldset style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px; border-radius: 10px; flex-grow: 1;">
+<fieldset style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px; margin-top: 20px; border-radius: 10px; flex-grow: 1;">
     <TesterBlazor.Components.Pages.InfoCredito.Nucleos.Componentes.ResultadoBusquedaNucleo />
 </fieldset>
 
