--- a/TesterBlazor/Components/Layout/EmptyLayout.razor
+++ b/TesterBlazor/Components/Layout/EmptyLayout.razor
@@ -25,6 +25,7 @@
 <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
 <script src="assets/mbr-tabs/mbr-tabs.js"></script>
 <script src="assets/theme/js/script.js"></script>
+<script src="src/js/js-extra-landing.js"></script>
 
 <div class="page">
     <div class="content">
