--- a/TesterBlazor/Components/Pages/InstagramTester.razor
+++ b/TesterBlazor/Components/Pages/InstagramTester.razor
@@ -1,4 +1,7 @@
 ﻿@page "/instagram"
+<DynamicAuthorize Ruta="/instagram" />
+
+@inject SessionState Session
 
 <PageTitle>Tester de Instagram</PageTitle>
 
