--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -1,61 +1,59 @@
-﻿@inject IJSRuntime JSRuntime
+﻿@inject IJSRuntime JSRuntime  
 
-@page "/home"
+@page "/home"  
 
-<PageTitle>Inicio aplicación de prueba</PageTitle>
+<PageTitle>Inicio aplicación de prueba</PageTitle>  
 
-<h1>Bienvenidos a la aplicación de pruebas Blazor 👋🏻</h1>
-<div>
-    <label>Esta aplicación contiene elementos de Blazor básicos que permiten hacer una llamada y demostración de la librería .NET creada.</label>
-</div>
+<h1>Bienvenidos a la aplicación de pruebas Blazor 👋🏻</h1>  
+<div>  
+    <label>Esta aplicación contiene elementos de Blazor básicos que permiten hacer una llamada y demostración de la librería .NET creada.</label>  
+</div>  
 
-<div class="row" style="margin-top: 15px">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Links y referencias sobre este proyecto:</h5>
-                <a href="https://github.com/ramiroagm/WinFormTester" class="btn btn-outline-danger">Repositorio</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Redes sociales:</h5>
-                <button type="button" class="btn btn-outline-info"
-                        data-bs-toggle="popover"
-                        data-bs-title="Redes sociales activas hoy"
-                        data-bs-html="true"
-                        data-bs-content="<a href='https://www.linkedin.com/in/ramiroagm/' target='_blank'>LinkedIn</a>
-                                        <br><a href='https://instagram.com/ramiroagm' target='_blank'>Instagram</a>">
-                    Ver más
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
+<div class="row" style="margin-top: 15px">  
+    <div class="col-sm-6">  
+        <div class="card">  
+            <div class="card-body d-flex justify-content-between align-items-center">  
+                <h5 class="card-title">Links y referencias sobre este proyecto:</h5>  
+                <a href="https://github.com/ramiroagm/WinFormTester" class="btn btn-outline-danger">Repositorio</a>  
+            </div>  
+        </div>  
+    </div>  
+    <div class="col-sm-6">  
+        <div class="card">  
+            <div class="card-body d-flex justify-content-between align-items-center">  
+                <h5 class="card-title">Redes sociales:</h5>  
+                <button type="button" class="btn btn-outline-info"  
+                        data-bs-toggle="popover"  
+                        data-bs-title="Redes sociales activas hoy"  
+                        data-bs-html="true"  
+                        data-bs-content="<a href='https://www.linkedin.com/in/ramiroagm/' target='_blank'>LinkedIn</a>">Ver más  
+                </button>  
+            </div>  
+        </div>  
+    </div>  
+</div>  
 
-<div class="card text-center" style="margin-top:15px">
-    <div class="card-header">
-        ⚠️ ¡Atención! ⚠️
-    </div>
-    <div class="card-body">
-        <h5 class="card-title">Leer antes de comenzar</h5>
-        <p class="card-text">Por favor: dirigirse hacia el README o Instucciones para más especificaciones sobre este proyecto y usar por su propio riesgo.</p>
-        <a href="https://github.com/ramiroagm/WinFormTester/blob/master/README.md" class="btn btn-danger">README</a>
-    </div>
-    <div class="card-footer text-body-secondary">
-        Por cualquier consulta, por favor, <a href="https://signal.me/#eu/o8Jiopihz2QrV5GCt232gsuEC7MDNyz3FnOeJR0xj-IeDz6FMDVBHIjNGzVD90ld" target="_blank">contactarse por chat (Signal)</a>
-    </div>
-</div>
+<div class="card text-center" style="margin-top:15px">  
+    <div class="card-header">  
+        ⚠️ ¡Atención! ⚠️  
+    </div>  
+    <div class="card-body">  
+        <h5 class="card-title">Leer antes de comenzar</h5>  
+        <p class="card-text">Por favor: dirigirse hacia el README o Instucciones para más especificaciones sobre este proyecto y usar por su propio riesgo.</p>  
+        <a href="https://github.com/ramiroagm/WinFormTester/blob/master/README.md" class="btn btn-danger">README</a>  
+    </div>  
+    <div class="card-footer text-body-secondary">  
+        Por cualquier consulta, por favor, <a href="https://signal.me/#eu/o8Jiopihz2QrV5GCt232gsuEC7MDNyz3FnOeJR0xj-IeDz6FMDVBHIjNGzVD90ld" target="_blank">contactarse por chat (Signal)</a>  
+    </div>  
+</div>  
 
-@code {
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            // await JSRuntime.InvokeVoidAsync("disposePopovers");
-            await JSRuntime.InvokeVoidAsync("initializePopovers");
-        }
-    }
+@code {  
+    protected override async Task OnAfterRenderAsync(bool firstRender)  
+    {  
+        if (firstRender)  
+        {  
+            // await JSRuntime.InvokeVoidAsync("disposePopovers");  
+            await JSRuntime.InvokeVoidAsync("initializePopovers");  
+        }  
+    }  
 }
