--- a/TesterBlazor/Components/Pages/BugReport.razor
+++ b/TesterBlazor/Components/Pages/BugReport.razor
@@ -49,6 +49,7 @@
     TesterProject.BusinessEntities.Utils.Bug reporte = new()
         {
             Titulo = string.Empty,
+            Mensaje = string.Empty,
             Imagenes = new List<ReporteImagenes>()
         };    
 
