Arreglo en el menú

--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -6,7 +6,9 @@
 
 @if (!_sessionInitialized)
 {
-    <div>Cargando...</div>
+    <div class="spinner-border text-light" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
 }
 else
 {
