--- a/TesterBlazor/Components/Pages/Home.razor
+++ b/TesterBlazor/Components/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@inject IJSRuntime JSRuntime  
-
+<DynamicAuthorize Ruta="/home" />
 @page "/home"  
 
 <PageTitle>Inicio aplicación de prueba</PageTitle>  
