--- a/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Nucelos.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Nucelos.razor
@@ -2,7 +2,7 @@
 
 @inject IJSRuntime JSRuntime
 @page "/infoCredito/nucleos"
-
+<DynamicAuthorize Ruta="/infoCredito/nucleos" />
 <PageTitle>Manejo de nucleos</PageTitle>
 
 <div class="d-flex align-items-start">
