--- a/TesterBlazor/Components/Pages/InfoCredito/Personas/Personas.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Personas/Personas.razor
@@ -1,7 +1,9 @@
 ﻿@using TesterBlazor.Models.InfoCredito
 
 @inject IJSRuntime JSRuntime
-@page "/InfoCredito/Personas"
+@page "/infoCredito/personas"
+
+<DynamicAuthorize Ruta="infoCredito/personas" />
 
 <PageTitle>Manejo de personas</PageTitle>
 
