--- a/TesterBlazor/Components/Pages/Login.razor
+++ b/TesterBlazor/Components/Pages/Login.razor
@@ -38,7 +38,7 @@
 
 <!-- Modal para usuarios de prueba -->
 <div class="modal fade" id="usuariosModal" tabindex="-1" aria-labelledby="usuariosModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-short">
         <div class="modal-content">
             <div class="modal-header bg-danger text-white">
                 <h5 class="modal-title" id="usuariosModalLabel">Usuarios de Prueba</h5>
@@ -48,13 +48,16 @@
                 testeo: 1234 <br />
                 beta: 1234
             </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
         </div>
     </div>
 </div>
 
 <!-- Modal para errores de login -->
 <div class="modal fade" id="loginErrorModal" tabindex="-1" aria-labelledby="loginErrorModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-short">
         <div class="modal-content">
             <div class="modal-header bg-danger text-white">
                 <h5 class="modal-title" id="loginErrorModalLabel">Error de inicio de sesión</h5>
@@ -64,6 +67,9 @@
                 {
                     @error
                 }
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
